--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -22,13 +22,13 @@
         </ImageView>
 
         <ImageView
-            android:id="@+id/icPerson"
+            android:id="@+id/icLogout"
             android:layout_width="33sp"
             android:layout_height="match_parent"
             android:layout_gravity="end"
             android:layout_marginTop="18sp"
             android:layout_marginEnd="25sp"
-            android:src="@drawable/ic_person"
+            android:src="@drawable/ic_logout"
             tools:ignore="ContentDescription,ImageContrastCheck"></ImageView>
 
     </androidx.cardview.widget.CardView>
