--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+
+<RelativeLayout
+ xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -34,16 +39,18 @@
 
     </androidx.cardview.widget.CardView>
 
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmemtContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/imglogo"
         android:layout_above="@id/bnNavigation"
+        android:layout_below="@id/imglogo"
+        android:layout_marginTop="-3dp"
+        android:layout_marginBottom="2dp"
         tools:layout="@layout/fragment_home">
 
     </androidx.fragment.app.FragmentContainerView>
-
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bnNavigation"
