--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,10 +5,15 @@
         android:id="@+id/navHome"
         android:icon="@drawable/ic_home"
         android:title="@string/home" />
+
     <item
         android:id="@+id/navBookingHistory"
         android:icon="@drawable/ic_history"
         android:title="@string/booking_history" />
+    <item
+        android:id="@+id/navBooking"
+        android:icon="@drawable/ic_booking"
+        android:title="Booking"/>
     <item
         android:id="@+id/navContactUs"
         android:icon="@drawable/ic_phone"
