--- a/app/src/main/res/layout/fragment_booking_history.xml
+++ b/app/src/main/res/layout/fragment_booking_history.xml
@@ -1,14 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HistoryFragment">
+    android:layout_marginTop="10dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    tools:context=".BookingHistoryFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/booking_history"
+        android:textSize = "20sp"
+        android:textColor="@color/orange_500"
+        android:textStyle="bold"
+        android:layout_marginBottom="10sp"
+        tools:ignore="TextContrastCheck">
+    </TextView>
+
+    <TableRow android:background="@color/light_orange" android:padding="10dp"
+        tools:ignore="UselessParent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/orange_500"
+            android:text="@string/id"
+            tools:ignore="TextContrastCheck"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/orange_500"
+            android:text="@string/machine"
+            tools:ignore="TextContrastCheck"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/orange_500"
+            android:text="@string/crop"
+            tools:ignore="TextContrastCheck"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/orange_500"
+            android:text="@string/selected_date"
+            tools:ignore="TextContrastCheck"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/orange_500"
+            android:text="@string/status"
+            tools:ignore="TextContrastCheck"/>
+
+    </TableRow>
+
+</TableLayout>
