Contact Us detail update

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/navBookingHistory"
         android:icon="@drawable/ic_history"
-        android:title="@string/booking_history" />
+        android:title="Recents" />
     <item
         android:id="@+id/navBooking"
         android:icon="@drawable/ic_booking"
