--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="200sp"
         app:cardCornerRadius="20sp"
-        android:layout_margin="15sp"
+        android:layout_margin="25sp"
         app:cardElevation="30sp">
 
         <com.denzcoskun.imageslider.ImageSlider
@@ -36,7 +36,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/crdContactForm"
         android:layout_width="360sp"
-        android:layout_height="610sp"
+        android:layout_height="780sp"
         android:layout_gravity="center"
         app:cardCornerRadius="15sp"
         android:layout_marginTop="260sp"
@@ -58,25 +58,14 @@
             android:textStyle="bold"
             tools:ignore="TextContrastCheck,TextContrastCheck" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        <Spinner
+            android:id="@+id/spiSelectMachinery"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/orange_500"
-            android:layout_marginTop="90sp"
-           android:layout_marginHorizontal="25sp">
-
-            <AutoCompleteTextView
-                android:id="@+id/autoCompleteTextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:inputType="none"
-                android:text="@string/select_service"
-                android:textColor="@color/orange_500"
-                tools:ignore="LabelFor,TextContrastCheck" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="50sp"
+            android:layout_marginHorizontal="25sp"
+            android:layout_marginTop="100sp"
+            android:textColor="@color/orange_500"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <EditText
             android:id="@+id/txtFullName"
@@ -91,13 +80,41 @@
             android:textColorHint="@color/orange_500"
             tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
 
+        <Spinner
+            android:id="@+id/spiSelectDistrict"
+            android:layout_width="145sp"
+            android:layout_height="50sp"
+            android:layout_marginHorizontal="25sp"
+            android:layout_marginTop="225sp"
+            android:textColor="@color/orange_500"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <Spinner
+            android:id="@+id/spiSelectTaluka"
+            android:layout_width="145sp"
+            android:layout_height="50sp"
+            android:layout_marginHorizontal="25sp"
+            android:layout_marginTop="225sp"
+            android:textColor="@color/orange_500"
+            android:layout_gravity="end"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <Spinner
+            android:id="@+id/spiSelectVillage"
+            android:layout_width="match_parent"
+            android:layout_height="50sp"
+            android:layout_marginHorizontal="25sp"
+            android:layout_marginTop="295sp"
+            android:textColor="@color/orange_500"
+            android:layout_gravity="end"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <EditText
             android:id="@+id/txtPincode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="230sp"
+            android:layout_marginTop="360sp"
             android:autofillHints=""
             android:backgroundTint="@color/orange_500"
             android:hint="@string/pincode"
@@ -111,7 +128,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="295sp"
+            android:layout_marginTop="430sp"
             android:autofillHints=""
             android:backgroundTint="@color/orange_500"
             android:hint="@string/phone_number"
@@ -125,7 +142,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="360sp"
+            android:layout_marginTop="500sp"
             android:autofillHints=""
             android:backgroundTint="@color/orange_500"
             android:hint="@string/crop_name"
@@ -139,7 +156,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="430sp"
+            android:layout_marginTop="570sp"
             android:autofillHints=""
             android:backgroundTint="@color/orange_500"
             android:hint="@string/date"
@@ -151,12 +168,25 @@
             android:focusableInTouchMode="false"
             tools:ignore="TextContrastCheck,TextFields" />
 
+        <EditText
+            android:id="@+id/txtHours"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="25sp"
+            android:layout_marginTop="635sp"
+            android:autofillHints=""
+            android:backgroundTint="@color/orange_500"
+            android:hint="@string/hours"
+            android:minHeight="48dp"
+            android:textColorHint="@color/orange_500"
+            tools:ignore="TextContrastCheck,TextFields" />
+
         <Button
             android:id="@+id/btnSubmit"
             android:layout_width="210sp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="75sp"
-            android:layout_marginTop="540sp"
+            android:layout_marginTop="705sp"
             android:backgroundTint="@color/green_500"
             android:text="@string/submit"
             android:textColor="#ffffff"
