--- a/app/src/main/res/layout/booking_details.xml
+++ b/app/src/main/res/layout/booking_details.xml
@@ -10,38 +10,109 @@
     android:paddingRight="5dp"
     tools:context=".BookingHistoryFragment">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <androidx.cardview.widget.CardView
             android:id="@+id/crdDetails"
             android:layout_width="320sp"
             android:layout_height="200sp"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:layout_marginVertical="90sp"
+            android:layout_marginVertical="30sp"
+            android:elevation="0sp"
             app:cardCornerRadius="10sp"
-            android:elevation="0sp">
+            app:cardElevation="10sp">
+
+            <TextView
+                android:id="@+id/txtServiceName"
+                android:layout_width="80sp"
+                android:layout_height="30sp"
+                android:layout_marginHorizontal="15sp"
+                android:layout_marginTop="40sp"
+                android:inputType="text"
+                android:text="@string/services"
+                android:textColor="@color/orange_500"
+                android:textSize="20sp"
+                tools:ignore="TextViewEdits,TouchTargetSizeCheck" />
+
+            <TextView
+                android:id="@+id/txtRentalPrice"
+                android:layout_width="50sp"
+                android:layout_height="20sp"
+                android:layout_marginHorizontal="15sp"
+                android:layout_gravity="end"
+                android:text="@string/price"
+                android:textColor="@color/orange_500"
+                android:textSize="15sp"
+                android:layout_marginTop="40sp"/>
+
+            <TextView
+                android:id="@+id/txtDate"
+                android:layout_width="100sp"
+                android:layout_height="20sp"
+                android:layout_marginHorizontal="15sp"
+                android:layout_marginTop="80sp"
+                android:inputType="text"
+                android:text="@string/purchase_date"
+                android:textColor="@color/orange_500"
+                android:textSize="15sp"
+                tools:ignore="TextViewEdits,TouchTargetSizeCheck" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_marginTop="110sp"
+                android:layout_marginHorizontal="5sp"
+                android:layout_height="1dp"
+                android:background="@color/lignt_gray"/>
+
+
+            <TextView
+                android:id="@+id/txtCropName"
+                android:layout_width="50sp"
+                android:layout_height="20sp"
+                android:layout_marginHorizontal="15sp"
+                android:layout_marginTop="120sp"
+                android:inputType="text"
+                android:text="@string/crop"
+                android:textColor="@color/orange_500"
+                android:textSize="15sp"
+                tools:ignore="TextViewEdits,TouchTargetSizeCheck,TextSizeCheck" />
+
+            <TextView
+                android:id="@+id/txtStatus"
+                android:layout_width="50sp"
+                android:layout_height="20sp"
+                android:layout_marginHorizontal="15sp"
+                android:layout_marginTop="120sp"
+                android:inputType="text"
+                android:text="@string/status"
+                android:layout_gravity="end"
+                android:textColor="@color/orange_500"
+                android:textSize="15sp"
+                tools:ignore="TextViewEdits,TouchTargetSizeCheck" />
+
+            <Button
+                android:id="@+id/showDetails"
+                android:layout_width="200sp"
+                android:layout_height="30sp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="160sp"
+                android:background="@color/orange_500"
+                android:gravity="center"
+                android:text="@string/show_details"
+                android:textSize="10sp"
+                tools:ignore="SmallSp,TextContrastCheck,TouchTargetSizeCheck" />
 
         </androidx.cardview.widget.CardView>
 
-    </RelativeLayout>
 
     <ImageView
         android:id="@+id/imgLeaf"
         android:layout_width="50sp"
         android:layout_height="50sp"
+        android:elevation="10sp"
         android:contentDescription="@null"
         android:src="@drawable/ic_leaf"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60sp"/>
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="50sp">
-
-    </androidx.cardview.widget.CardView>
+        android:layout_marginTop="5sp"/>
 
 </RelativeLayout>
 
