--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -4,7 +4,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:textColor="@color/black"
+        android:textColor="@color/orange_500"
         android:textStyle="bold"
         android:padding="14dp"
         android:layout_height="wrap_content"
