--- a/app/src/main/res/layout/fragment_booking_history.xml
+++ b/app/src/main/res/layout/fragment_booking_history.xml
@@ -11,18 +11,10 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/txt"
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lstItems"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/booking_history"
-        android:textSize = "25sp"
-        android:layout_marginTop="20sp"
-        android:layout_marginHorizontal="10sp"
-        android:textColor="@color/orange_500"
-        android:textStyle="bold"
-        android:layout_marginBottom="10sp"
-        tools:ignore="TextContrastCheck">
-    </TextView>
+        tools:listitem="@layout/booking_details"/>
 
 </RelativeLayout>
