--- a/app/src/main/res/layout/fragment_booking_history.xml
+++ b/app/src/main/res/layout/fragment_booking_history.xml
@@ -6,6 +6,7 @@
     android:layout_marginTop="10dp"
     android:orientation="vertical"
     android:paddingLeft="5dp"
+    android:background="@color/orange_500"
     android:paddingRight="5dp"
     tools:context=".BookingHistoryFragment">
 
