--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,107 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="200sp"
         android:orientation="vertical"
+        android:background="@color/orange_500"
         tools:context=".HomeFragment">
 
         <!-- TODO: Update blank fragment layout -->
-        <HorizontalScrollView
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vpMachine"
             android:layout_width="match_parent"
-            android:layout_height="240sp"
-            android:scrollbars="none"
-            tools:ignore="SpeakableTextPresentCheck">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@color/orange_500">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/crdHarvesterAd"
-                    android:layout_width="300sp"
-                    android:layout_height="180sp"
-                    android:layout_marginHorizontal="19sp"
-                    android:layout_marginVertical="35sp"
-                    app:cardCornerRadius="15sp"
-                    app:cardElevation="15sp">
-
-                    <ImageView
-                        android:id="@+id/imdHarvesterAd"
-                        android:layout_width="300sp"
-                        android:layout_height="180sp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/harvester2"
-                        tools:ignore="ContentDescription">
-
-                    </ImageView>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/crdTractorAd"
-                    android:layout_width="300sp"
-                    android:layout_height="180sp"
-                    android:layout_marginHorizontal="10sp"
-                    android:layout_marginVertical="35sp"
-                    app:cardCornerRadius="15sp"
-                    app:cardElevation="15sp">
-
-                    <ImageView
-                        android:id="@+id/imgTractor"
-                        android:layout_width="300sp"
-                        android:layout_height="180sp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/thresher1"
-                        tools:ignore="ContentDescription">
-
-                    </ImageView>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/crdDroneSprayerAd"
-                    android:layout_width="300sp"
-                    android:layout_height="180sp"
-                    android:layout_marginHorizontal="20sp"
-                    android:layout_marginVertical="35sp"
-                    app:cardCornerRadius="15sp"
-                    app:cardElevation="15sp">
-
-                    <ImageView
-                        android:id="@+id/imgDroneSprayerAd"
-                        android:layout_width="300sp"
-                        android:layout_height="180sp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/dronedisplay"
-                        tools:ignore="ContentDescription">
-
-                    </ImageView>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/crdThresherAd"
-                    android:layout_width="300sp"
-                    android:layout_height="180sp"
-                    android:layout_marginHorizontal="15sp"
-                    android:layout_marginVertical="35sp"
-                    app:cardCornerRadius="15sp"
-                    app:cardElevation="15sp">
-
-                    <ImageView
-                        android:id="@+id/imgThresherAd"
-                        android:layout_width="310sp"
-                        android:layout_height="190sp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/thresher2"
-                        tools:ignore="ContentDescription">
-
-                    </ImageView>
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-        </HorizontalScrollView>
+            android:layout_height="match_parent"
+            android:layout_marginVertical="20sp"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/crdServices"
