updated bookingHistory Fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="orange_500">#FFA500</color>
     <color name="black">#FF000000</color>
-    <color name="lignt_gray">#D9D9D9</color>
+    <color name="light_gray">#D9D9D9</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green_500">#31D438</color>
     <color name="light_orange">#61FFEDD5</color>
