--- a/app/src/main/res/layout/booking_details.xml
+++ b/app/src/main/res/layout/booking_details.xml
@@ -1,118 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="10dp"
     android:orientation="vertical"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
     tools:context=".BookingHistoryFragment">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/crdDetails"
-            android:layout_width="320sp"
-            android:layout_height="200sp"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_marginVertical="30sp"
-            android:elevation="0sp"
-            app:cardCornerRadius="10sp"
-            app:cardElevation="10sp">
-
-            <TextView
-                android:id="@+id/txtServiceName"
-                android:layout_width="80sp"
-                android:layout_height="30sp"
-                android:layout_marginHorizontal="15sp"
-                android:layout_marginTop="40sp"
-                android:inputType="text"
-                android:text="@string/services"
-                android:textColor="@color/orange_500"
-                android:textSize="20sp"
-                tools:ignore="TextViewEdits,TouchTargetSizeCheck" />
-
-            <TextView
-                android:id="@+id/txtRentalPrice"
-                android:layout_width="50sp"
-                android:layout_height="20sp"
-                android:layout_marginHorizontal="15sp"
-                android:layout_gravity="end"
-                android:text="@string/price"
-                android:textColor="@color/orange_500"
-                android:textSize="15sp"
-                android:layout_marginTop="40sp"/>
-
-            <TextView
-                android:id="@+id/txtDate"
-                android:layout_width="100sp"
-                android:layout_height="20sp"
-                android:layout_marginHorizontal="15sp"
-                android:layout_marginTop="80sp"
-                android:inputType="text"
-                android:text="@string/purchase_date"
-                android:textColor="@color/orange_500"
-                android:textSize="15sp"
-                tools:ignore="TextViewEdits,TouchTargetSizeCheck" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_marginTop="110sp"
-                android:layout_marginHorizontal="5sp"
-                android:layout_height="1dp"
-                android:background="@color/lignt_gray"/>
-
-
-            <TextView
-                android:id="@+id/txtCropName"
-                android:layout_width="50sp"
-                android:layout_height="20sp"
-                android:layout_marginHorizontal="15sp"
-                android:layout_marginTop="120sp"
-                android:inputType="text"
-                android:text="@string/crop"
-                android:textColor="@color/orange_500"
-                android:textSize="15sp"
-                tools:ignore="TextViewEdits,TouchTargetSizeCheck,TextSizeCheck" />
-
-            <TextView
-                android:id="@+id/txtStatus"
-                android:layout_width="50sp"
-                android:layout_height="20sp"
-                android:layout_marginHorizontal="15sp"
-                android:layout_marginTop="120sp"
-                android:inputType="text"
-                android:text="@string/status"
-                android:layout_gravity="end"
-                android:textColor="@color/orange_500"
-                android:textSize="15sp"
-                tools:ignore="TextViewEdits,TouchTargetSizeCheck" />
-
-            <Button
-                android:id="@+id/showDetails"
-                android:layout_width="200sp"
-                android:layout_height="30sp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="160sp"
-                android:background="@color/orange_500"
-                android:gravity="center"
-                android:text="@string/show_details"
-                android:textSize="10sp"
-                tools:ignore="SmallSp,TextContrastCheck,TouchTargetSizeCheck" />
-
-        </androidx.cardview.widget.CardView>
-
-
-    <ImageView
-        android:id="@+id/imgLeaf"
-        android:layout_width="50sp"
-        android:layout_height="50sp"
-        android:elevation="10sp"
-        android:contentDescription="@null"
-        android:src="@drawable/ic_leaf"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/crdDetails"
+        android:layout_width="320sp"
+        android:layout_height="200sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5sp"/>
+        android:layout_gravity="center"
+        android:layout_marginVertical="30sp"
+        android:elevation="0sp"
+        app:cardCornerRadius="10sp"
+        app:cardElevation="10sp">
+
+
+        <TextView
+            android:id="@+id/txtServiceName"
+            android:layout_width="wrap_content"
+            android:layout_height="30sp"
+            android:layout_marginHorizontal="15sp"
+            android:layout_marginTop="30sp"
+            android:inputType="text"
+            android:text="@string/services"
+            android:textColor="@color/orange_500"
+            android:textSize="20sp"
+            tools:ignore="TextViewEdits,TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />
+
+        <TextView
+            android:id="@+id/txtRentalPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="20sp"
+            android:layout_gravity="end"
+            android:layout_marginHorizontal="15sp"
+            android:layout_marginTop="30sp"
+            android:text="@string/price"
+            android:textColor="@color/orange_500"
+            android:textSize="17sp"
+            tools:ignore="TextSizeCheck,TextContrastCheck" />
+
+        <TextView
+            android:id="@+id/txtDate"
+            android:layout_width="wrap_content"
+            android:layout_height="20sp"
+            android:layout_marginHorizontal="15sp"
+            android:layout_marginTop="75sp"
+            android:inputType="text"
+            android:text="@string/purchase_date"
+            android:textColor="@color/orange_500"
+            android:textSize="15sp"
+            tools:ignore="TextViewEdits,TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginHorizontal="5sp"
+            android:layout_marginTop="110sp"
+            android:background="@color/light_gray" />
+
+
+        <TextView
+            android:id="@+id/txtCropName"
+            android:layout_width="wrap_content"
+            android:layout_height="20sp"
+            android:layout_marginHorizontal="15sp"
+            android:layout_marginTop="160sp"
+            android:inputType="text"
+            android:text="@string/crop"
+            android:textColor="@color/orange_500"
+            android:textSize="17sp"
+            tools:ignore="TextViewEdits,TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />
+
+
+        <TextView
+            android:id="@+id/txtPincode"
+            android:layout_width="wrap_content"
+            android:layout_height="20sp"
+            android:layout_marginHorizontal="15sp"
+            android:layout_marginTop="125sp"
+            android:inputType="text"
+            android:text="@string/pin"
+            android:textColor="@color/orange_500"
+            android:textSize="17sp"
+            tools:ignore="TextViewEdits,TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />
+
+
+        <TextView
+            android:id="@+id/txtStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="20sp"
+            android:layout_gravity="end"
+            android:layout_marginHorizontal="20sp"
+            android:layout_marginTop="145sp"
+            android:inputType="text"
+            android:text="@string/status"
+            android:textColor="@color/orange_500"
+            android:textSize="17sp"
+            tools:ignore="TextViewEdits,TouchTargetSizeCheck,TextSizeCheck,TextContrastCheck" />
+
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
 
