District Taluka and Village fetch from database in booking

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,7 @@
         <!-- Customize your theme here. -->
         <item name="android:navigationBarColor">@color/white</item>
     </style>
+    <style name="My.Spinner.Style" parent="Base.Widget.AppCompat.Spinner.Underlined">
+        <item name="android:color">@color/orange_500</item>
+    </style>
 </resources>
