--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/orange_500"
     tools:context=".ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+<ImageView
+    android:id="@+id/imgDisplayPicture"
+    android:layout_width="100sp"
+    android:layout_height="100sp"
+    android:src="@drawable/profile"
+    android:layout_marginTop="40sp"
+   android:layout_centerHorizontal="true"
+    tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/txtName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/person_name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150sp"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        tools:ignore="TextContrastCheck" />
+
+    <TextView
+        android:id="@+id/txtEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/person_email"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="190sp"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        tools:ignore="TextContrastCheck" />
+
+        <TextView
+            android:id="@+id/txtMyAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20sp"
+            android:layout_marginTop="300sp"
+            android:drawableEnd="@drawable/ic_arrow_forward"
+            android:text="@string/my_account"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            tools:ignore="TextContrastCheck,UseCompatTextViewDrawableXml" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginHorizontal="20sp"
+            android:layout_marginTop="345sp"
+            android:background="@color/light_gray" />
+
+    <TextView
+            android:id="@+id/txtAboutUS"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20sp"
+            android:layout_marginTop="365sp"
+            android:drawableEnd="@drawable/ic_arrow_forward"
+            android:text="@string/support"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            tools:ignore="TextContrastCheck,UseCompatTextViewDrawableXml" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="20sp"
+        android:layout_marginTop="415sp"
+        android:background="@color/light_gray" />
+
+        <TextView
+            android:id="@+id/txtSupport"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20sp"
+            android:layout_marginTop="435sp"
+            android:drawableEnd="@drawable/ic_arrow_forward"
+            android:text="@string/about_us"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            tools:ignore="TextContrastCheck,UseCompatTextViewDrawableXml" />
+
+    <TextView
+        android:id="@+id/txtAppVersion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="605sp"
+        android:text="@string/version"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        tools:ignore="TextContrastCheck,UseCompatTextViewDrawableXml" />
+
+</RelativeLayout>
