--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,207 +7,207 @@
     android:fillViewport="true"
     android:scrollbars="none">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/orange_500"
-    tools:context=".BookingFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <androidx.cardview.widget.CardView
-        android:layout_width="355sp"
-        android:layout_height="200sp"
-        app:cardCornerRadius="20sp"
-        android:layout_margin="25sp"
-        app:cardElevation="30sp">
-
-        <com.denzcoskun.imageslider.ImageSlider
-            android:id="@+id/image_slider"
-            android:layout_width="355sp"
-            android:layout_height="wrap_content"
-            app:iss_auto_cycle="true"
-            app:iss_period="2000"
-            app:iss_delay="0" />
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/crdContactForm"
-        android:layout_width="360sp"
-        android:layout_height="850sp"
-        android:layout_gravity="center"
-        app:cardCornerRadius="15sp"
-        android:layout_marginTop="260sp"
-        android:layout_marginBottom="25sp"
-        android:layout_marginHorizontal="25sp"
-        app:cardElevation="15sp">
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:background="@color/orange_500"
+        android:orientation="vertical"
+        tools:context=".BookingFragment">
 
+        <!-- Update blank fragment layout -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="355sp"
+            android:layout_height="200sp"
+            android:layout_margin="25sp"
+            app:cardCornerRadius="20sp"
+            app:cardElevation="30sp">
 
-        <TextView
-            android:id="@+id/txtContactForm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-           android:layout_centerHorizontal="true"
-            android:layout_marginVertical="20sp"
-            android:gravity="center"
-            android:text="@string/booking_form"
-            android:textColor="@color/orange_500"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            tools:ignore="TextContrastCheck,TextContrastCheck" />
+            <com.denzcoskun.imageslider.ImageSlider
+                android:id="@+id/image_slider"
+                android:layout_width="355sp"
+                android:layout_height="wrap_content"
+                app:iss_auto_cycle="true"
+                app:iss_delay="0"
+                app:iss_period="2000" />
 
-        <Spinner
-            android:id="@+id/spiSelectMachinery"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-            android:backgroundTint="@color/orange_500"
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/crdContactForm"
+            android:layout_width="360sp"
+            android:layout_height="850sp"
+            android:layout_gravity="center"
             android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="100sp"
-            tools:ignore="SpeakableTextPresentCheck" />
+            android:layout_marginTop="260sp"
+            android:layout_marginBottom="25sp"
+            app:cardCornerRadius="15sp"
+            app:cardElevation="15sp">
 
-        <EditText
-            android:id="@+id/txtFullName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="164sp"
-            android:autofillHints=""
-            android:backgroundTint="@color/orange_500"
-            android:hint="@string/full_name"
-            android:inputType="text"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            android:textColorHint="@color/orange_500"
-            tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
 
-        <Spinner
-            android:id="@+id/spiSelectDistrict"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="225sp"
-            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-            android:backgroundTint="@color/orange_500"
-            android:textColor="@color/orange_500"
-            tools:ignore="SpeakableTextPresentCheck" />
+                <TextView
+                    android:id="@+id/txtContactForm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginVertical="20sp"
+                    android:gravity="center"
+                    android:text="@string/booking_form"
+                    android:textColor="@color/orange_500"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    tools:ignore="TextContrastCheck,TextContrastCheck" />
 
-        <Spinner
-            android:id="@+id/spiSelectTaluka"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="295sp"
-            android:backgroundTint="@color/orange_500"
-            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-            android:textColor="@color/orange_500"
-            android:layout_gravity="end"
-            tools:ignore="SpeakableTextPresentCheck" />
+                <Spinner
+                    android:id="@+id/spiSelectMachinery"
+                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+                    android:layout_width="match_parent"
+                    android:layout_height="50sp"
+                    android:layout_marginHorizontal="25sp"
+                    android:layout_marginTop="100sp"
+                    android:backgroundTint="@color/orange_500"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
-        <Spinner
-            android:id="@+id/spiSelectVillage"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="360sp"
-            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-            android:backgroundTint="@color/orange_500"
-            android:textColor="@color/orange_500"
-            android:layout_gravity="end"
-            tools:ignore="SpeakableTextPresentCheck" />
+                <EditText
+                    android:id="@+id/txtFullName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="25sp"
+                    android:layout_marginTop="164sp"
+                    android:autofillHints=""
+                    android:backgroundTint="@color/orange_500"
+                    android:hint="@string/full_name"
+                    android:inputType="text"
 
-        <EditText
-            android:id="@+id/txtPincode"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="430sp"
-            android:autofillHints=""
-            android:backgroundTint="@color/orange_500"
-            android:hint="@string/pincode"
-            android:inputType="number"
-            android:minHeight="48dp"
-            android:textColorHint="@color/orange_500"
-            tools:ignore="TextContrastCheck" />
+                    android:textColorHint="@color/orange_500"
+                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
 
-        <EditText
-            android:id="@+id/txtPhoneNumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="500sp"
-            android:autofillHints=""
-            android:backgroundTint="@color/orange_500"
-            android:hint="@string/phone_number"
-            android:inputType="phone"
-            android:minHeight="48dp"
-            android:textColorHint="@color/orange_500"
-            tools:ignore="TextContrastCheck" />
+                <Spinner
+                    android:id="@+id/spiSelectDistrict"
+                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+                    android:layout_width="match_parent"
+                    android:layout_height="50sp"
+                    android:layout_marginHorizontal="25sp"
+                    android:layout_marginTop="225sp"
+                    android:backgroundTint="@color/orange_500"
+                    android:textColor="@color/orange_500"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
-        <EditText
-            android:id="@+id/txtQuery"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="570sp"
-            android:autofillHints=""
-            android:backgroundTint="@color/orange_500"
-            android:hint="@string/crop_name"
-            android:minHeight="48dp"
-            android:inputType="text"
-            android:textColorHint="@color/orange_500"
-            tools:ignore="TextContrastCheck" />
+                <Spinner
+                    android:id="@+id/spiSelectTaluka"
+                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+                    android:layout_width="match_parent"
+                    android:layout_height="50sp"
+                    android:layout_gravity="end"
+                    android:layout_marginHorizontal="25sp"
+                    android:layout_marginTop="295sp"
+                    android:backgroundTint="@color/orange_500"
+                    android:textColor="@color/orange_500"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
-        <EditText
-            android:id="@+id/idEdtDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25sp"
+                <Spinner
+                    android:id="@+id/spiSelectVillage"
+                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+                    android:layout_width="match_parent"
+                    android:layout_height="50sp"
+                    android:layout_gravity="end"
+                    android:layout_marginHorizontal="25sp"
+                    android:layout_marginTop="360sp"
+                    android:backgroundTint="@color/orange_500"
+                    android:textColor="@color/orange_500"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
-            android:layout_marginTop="635sp"
-            android:autofillHints=""
-            android:backgroundTint="@color/orange_500"
-            android:hint="@string/date"
-            android:minHeight="48dp"
-            android:textColorHint="@color/orange_500"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            tools:ignore="TextContrastCheck,TextFields" />
+                <EditText
+                    android:id="@+id/txtPincode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="25sp"
+                    android:layout_marginTop="430sp"
+                    android:autofillHints=""
+                    android:backgroundTint="@color/orange_500"
+                    android:hint="@string/pincode"
+                    android:inputType="number"
+                    android:minHeight="48dp"
+                    android:textColorHint="@color/orange_500"
+                    tools:ignore="TextContrastCheck" />
 
-        <EditText
-            android:id="@+id/txtHours"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="705sp"
-            android:autofillHints=""
-            android:backgroundTint="@color/orange_500"
-            android:hint="@string/hours"
-            android:minHeight="48dp"
-            android:textColorHint="@color/orange_500"
-            tools:ignore="TextContrastCheck,TextFields" />
+                <EditText
+                    android:id="@+id/txtPhoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="25sp"
+                    android:layout_marginTop="500sp"
+                    android:autofillHints=""
+                    android:backgroundTint="@color/orange_500"
+                    android:hint="@string/phone_number"
+                    android:inputType="phone"
+                    android:minHeight="48dp"
+                    android:textColorHint="@color/orange_500"
+                    tools:ignore="TextContrastCheck" />
 
-        <Button
-            android:id="@+id/btnSubmit"
-            android:layout_width="210sp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="75sp"
-            android:layout_marginTop="785sp"
-            android:backgroundTint="@color/green_500"
-            android:text="@string/submit"
-            android:textColor="#ffffff"
-            android:textSize="19sp"
-            tools:ignore="TextContrastCheck" />
+                <EditText
+                    android:id="@+id/txtQuery"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="25sp"
+                    android:layout_marginTop="570sp"
+                    android:autofillHints=""
+                    android:backgroundTint="@color/orange_500"
+                    android:hint="@string/crop_name"
+                    android:inputType="text"
+                    android:minHeight="48dp"
+                    android:textColorHint="@color/orange_500"
+                    tools:ignore="TextContrastCheck" />
+
+                <EditText
+                    android:id="@+id/idEdtDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="25sp"
+
+                    android:layout_marginTop="635sp"
+                    android:autofillHints=""
+                    android:backgroundTint="@color/orange_500"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:hint="@string/date"
+                    android:minHeight="48dp"
+                    android:textColorHint="@color/orange_500"
+                    tools:ignore="TextContrastCheck,TextFields" />
+
+                <EditText
+                    android:id="@+id/txtHours"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="25sp"
+                    android:layout_marginTop="705sp"
+                    android:autofillHints=""
+                    android:backgroundTint="@color/orange_500"
+                    android:hint="@string/hours"
+                    android:minHeight="48dp"
+                    android:textColorHint="@color/orange_500"
+                    tools:ignore="TextContrastCheck,TextFields" />
+
+                <Button
+                    android:id="@+id/btnSubmit"
+                    android:layout_width="210sp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="75sp"
+                    android:layout_marginTop="785sp"
+                    android:backgroundTint="@color/green_500"
+                    android:text="@string/submit"
+                    android:textColor="#ffffff"
+                    android:textSize="19sp"
+                    tools:ignore="TextContrastCheck" />
+
+            </RelativeLayout>
+
+        </androidx.cardview.widget.CardView>
 
     </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
-
-</RelativeLayout>
 </ScrollView>
